--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -30,13 +30,16 @@ section {
     padding: 80px 0;
 }
 
+.box {
+    padding: 1%
+}
+
 /* --------------------------- */
 /* HEADINGS */
 /* --------------------------- */
-h1, h2 {
+h1, h2, h3 {
     font-weight: 300;
     text-transform: uppercase;
-    letter-spacing: 1px;
 }
 
 h1 {
@@ -45,6 +48,7 @@ h1 {
     color: #fff;
     font-size: 240%; 
     word-spacing: 4px;
+    letter-spacing: 1px;
 }
 
 h2 {
@@ -52,6 +56,12 @@ h2 {
     word-spacing: 2px;
     text-align: center;
     margin-bottom: 38px;
+    letter-spacing: 1px;
+}
+
+h3 {
+    font-size: 110%;
+    margin-bottom: 15px;
 }
 
 h2::after {
@@ -72,6 +82,21 @@ h2::after {
     line-height: 145%;
     width: 70%;
     margin-left: 15%;
+}
+.box p {
+    font-size: 90%;
+    line-height: 145%;
+}
+
+/* --------------------------- */
+/* ICONS */
+/* --------------------------- */
+
+.icon-big {
+    font-size: 400%;
+    display: block;
+    color: #e67e22;
+    margin-bottom: 15px;
 }
 
 /* --------------------------- */
